[package]
name = "dongi"
version = "0.1.0"
edition = "2021"
description = "A sync tool for your files and directories"
authors = ["Lemon Mint"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive", "unicode"] }
